--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "kartik-v/yii2-tabs-x": "@dev",
         "qiniu/php-sdk": "~7.0.0",
         "liyunfang/yii2-widget-linkpager": "^1.0",
-        "kartik-v/yii2-editable": "@dev"
+        "kartik-v/yii2-editable": "@dev",
+        "bailangzhan/yii2-webuploader": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
